include/core-math.h

extern int signgam;

float cr_acosf(float);
float cr_acoshf(float);
float cr_acospif(float);
float cr_asinf(float);
float cr_asinhf(float);
float cr_asinpif(float);
float cr_atanf(float);
float cr_atan2f(float, float);
float cr_atan2pif(float, float);
float cr_atanhf(float);
float cr_atanpif(float);
float cr_cbrtf(float);
float cr_compoundf(float, float);
float cr_cosf(float);
float cr_coshf(float);
float cr_cospif(float);
float cr_erff(float);
float cr_erfcf(float);
float cr_expf(float);
float cr_exp10f(float);
float cr_exp10m1f(float);
float cr_exp2f(float);
float cr_exp2m1f(float);
float cr_expm1f(float);
float cr_hypotf(float, float);
float cr_lgammaf(float);
float cr_logf(float);
float cr_log10f(float);
float cr_log10p1f(float);
float cr_log1pf(float);
float cr_log2f(float);
float cr_log2p1f(float);
float cr_powf(float, float);
float cr_rsqrtf(float);
float cr_sinf(float);
void cr_sincosf(float, float *s, float *c);
float cr_sinhf(float);
float cr_sinpif(float);
float cr_tanf(float);
float cr_tanhf(float);
float cr_tanpif(float);
float cr_tgammaf(float);

double cr_acos(double);
double cr_acosh(double);
double cr_acospi(double);
double cr_asin(double);
double cr_asinh(double);
double cr_asinpi(double);
double cr_atan(double);
double cr_atan2(double, double);
double cr_atan2pi(double, double);
double cr_atanh(double);
double cr_atanpi(double);
double cr_cbrt(double);
double cr_cos(double);
double cr_cosh(double);
double cr_cospi(double);
double cr_erf(double);
double cr_erfc(double);
double cr_exp(double);
double cr_exp10(double);
double cr_exp10m1(double);
double cr_exp2(double);
double cr_exp2m1(double);
double cr_expm1(double);
double cr_hypot(double, double);
double cr_lgamma(double);
double cr_log(double);
double cr_log10(double);
double cr_log10p1(double);
double cr_log1p(double);
double cr_log2(double);
double cr_log2p1(double);
double cr_pow(double, double);
double cr_rsqrt(double);
double cr_sin(double);
void cr_sincos(double, double *s, double *c);
double cr_sinh(double);
double cr_sinpi(double);
double cr_tan(double);
double cr_tanh(double);
double cr_tanpi(double);
double cr_tgamma(double);